k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-api
  labels:
    app: cats-api

# Запустить в 3х экземплярах те приложения, которые имеют метку cats-api
spec:
  replicas: 3
  selector:
    matchLabels:
      # (1) link :
      app: cats-api

# Стратегия обновления
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1

#      параметры запуска:
  template:
    metadata:
      labels:
        # (1) link ^
        app: cats-api
    spec:
      containers:
        - name: cats-api
          image: 8881981/cat:1.1
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          # Приложение живое (если перегружено - живое)
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
