k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-api
spec:

#  На какие pods делать запросы
  selector:
    app: cats-api
  ports:
    - protocol: TCP
      port: 80

#      На каком порту запускается приложение
      targetPort: 8080
